# quickwit-haskell

./: .gitignore  Justfile  README.md  flake.nix
config/: quickwit.yaml
journald-ingestor/: JournaldIngestor.hs  README.md  journald-ingestor.cabal
log-quickwit/: README.md  log-quickwit.cabal
log-quickwit/src/Log/Backend/: Quickwit.hs
quickwit-client/: README.md  quickwit-client.cabal
quickwit-client/src/: Quickwit.hs
quickwit-client/src/Quickwit/: HTTP.hs  Index.hs  Mapping.hs  Quotes.hs
quickwit-ui/: QuickwitUI.hs  quickwit-ui.cabal
quickwit-web/: QuickwitWeb.hs  README.md  quickwit-web.cabal
